--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,14 +4,64 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
-    
+
     <f:view contentType="text/html" locale="pt" />
 
     <head>
-        <title>Hello</title>
+        <title>Cadastro Cliente</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     </head>
 
     <body>
+        <div class="container-fluid">
+            <h:form>
+                <h:messages showSummary="true"/>
+                <div class="form-group">
+                    <label>Nome</label>
+                    <h:inputText value="#{clienteControle.cliente.nome}" class="form-control" validatorMessage="Nome é Obrigatorio">
+                                 <f:validateRequired />
+                                </h:inputText >
+                </div>
 
+                <div class="form-group">
+                    <label>CPF</label>
+                    <h:inputText value="#{clienteControle.cliente.cpf}" class="form-control" validatorMessage ="CPF deve conter 11 numeros">
+                      <f:validateRegex pattern="^[0-9]{3}\.?[0-9]{3}\.?[0-9]{3}\-?[0-9]{2}$" />
+                     </h:inputText>
+                </div>
+
+                <div class="form-group">
+                    <label>Data nascimento</label>
+                    <h:inputText value="#{clienteControle.cliente.dataNascimento}" class="form-control" ><f:convertDateTime parent="dd/MM/yyyy"/> 
+                    </h:inputText>
+                </div>
+
+                <div class="form-group">
+                    <label>Endereço</label>
+                    <h:inputText value="#{clienteControle.cliente.endereco}" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label>Cidade</label>
+                    <h:inputText value="#{clienteControle.cliente.cidade}" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label>Estado</label>
+                    <h:selectOneMenu value ="#{clienteControle.cliente.estado}" class="form-control">
+                        <f:selectItem itemValue ="" />
+                        <f:selectItems value ="#{clienteControle.listaEstados}" />
+                    
+                    </h:selectOneMenu>
+                </div>
+
+                <div class="form-check"> 
+                    <h:selectBooleanCheckbox class="form-check-input" />
+                    <label class="form-check-label">Ativo</label>
+                </div>
+
+                <h:commandButton class="btn btn-primary" value="Salvar" />
+            </h:form>
+        </div>
     </body>
 </html>
